feat: add swagger configs API docs
